--- a/service.yaml
+++ b/service.yaml
@@ -7,6 +7,6 @@ spec:
     app: new
   type: NodePort
   ports: 
-      protocol: TCP
+    - protocol: TCP
       port: 80
-      targetPort: 30008
+      NodePort: 30008
