--- a/deploy.yaml
+++ b/deploy.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: my-container
-        image: nginx:1.14.2
+        image: saharemayur319/proj2:latest
         ports:
         - containerPort: 80
