--- a/service.yaml
+++ b/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata: 
-   name: my-service
+  name: my-service
 spec:
   selector: 
     app: new
@@ -9,4 +9,4 @@ spec:
   ports: 
     - protocol: TCP
       port: 80
-      NodePort: 30008
+      targetPort: 30008
